# Interview-Backend-Developer

./: README.md  api.rest  makefile  pyproject.toml
backend/: .env  pyproject.toml
backend/src/backend/: main.py  models.py  product_repository.py  product_service.py  routes.py  schemas.py
backend/src/config/: database.py
database_postgresql/: public.sql
frontend/: README.md  pyproject.toml
frontend/src/frontend/: app.py  http_client.py
frontend/src/frontend/templates/: form.html  index.html
