[project]
name = "interview-test-fastapi-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "Eko Widodo",email = "ekowdd89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.poetry.workspace]
mambers = ["backend", "frontend"]
