[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Eko Widodo",email = "ekowdd89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (==2.9.9)",
    "pydantic (>=2.11.7,<3.0.0)",
    "jaraco-functools (>=4.2.1,<5.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "psycopg (>=3.2.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
