[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "Eko Widodo",email = "ekowdd89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "frontend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
